# core-cpp-ri-asyncevent

./: .clang-tidy  CHANGELOG.txt  CMakeLists.txt  README.md  futoin.json
include/futoin/ri/: eventemitter.hpp
src/: eventemitter.cpp
tests/: eventemitter.test.cpp
